--- a/README.Rmd
+++ b/README.Rmd
@@ -16,7 +16,7 @@ knitr::opts_chunk$set(
 
 The **boundid** package accompanies the paper "Going Through the Roof: Difference-in-Differences Designs in Contexts of Natural Boundaries" by Ludwig Schulze and Joris Frese. In this paper, we discuss parallel trends violations in difference-in-differences estimations where treated units are unable to follow the counterfactual control trend post-treatment due to natural boundaries to the scale of the outcome variable.
 
-The goal of the **boundid** package is to quantify the bias resulting from this parallel trends violation and account for it with various trimming- and weighting-based methods. The package is built around two complementary functions: **boundid_test**, and **boundid_adjust**.
+The goal of the **boundid** package is to quantify the bias resulting from this parallel trends violation and account for it with various trimming- and weighting-based methods. The package is built around two complementary functions: **boundid_test** and **boundid_adjust**.
 
 
 ## Installation
